--- a/AccountButton.css
+++ b/AccountButton.css
@@ -14,11 +14,33 @@
   overflow: hidden;
 }
 
+@media (max-width: 1700px) {
+  .account-icon {
+      position: absolute;
+      top: -5px; /* 根據需要調整垂直位置 */
+      right: 30px; /* 距離右側邊緣 20px */
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+}
+
 .account-icon img {
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
 }
+
+@media (max-width: 1700px) {
+  .account-icon img {
+      width: 35px;
+      height: 35px;
+    }
+}
+
+
 
 .account-menu {
   position: absolute;
