--- a/MainPage.css
+++ b/MainPage.css
@@ -13,13 +13,22 @@ body, html {
   width: 100%; /* 占满整个宽度 */
 }
 
-
 .top {
   background-color: #294761;
   flex: 0 0 100px; /* 固定高度 */
   position: relative;
   text-align: center;
   line-height: 130px; /* 垂直居中 */
+}
+
+@media (max-width: 1700px) {
+  .top {
+      background-color: #294761;
+      flex: 0 0 80px; /* 固定高度 */
+      position: relative;
+      text-align: center;
+      line-height: 100px; /* 垂直居中 */
+    }
 }
 
 .logo-mainpage img {
@@ -31,33 +40,64 @@ body, html {
 
 }
 
+@media (max-width: 1700px) {
+  .logo-mainpage img {
+    width: 350px;
+    height: auto;
+  }
+}
+
 .stagingarea-icon {
   position: absolute;
-  top: 15px; /* 根據需要調整垂直位置 */
+  top: 35px; /* 根據需要調整垂直位置 */
   right: 170px; /* 距離右側邊緣 20px */
-
-
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
 }
-.stagingarea-icon img {
-  width: 100%;
-  height: 100%;
 
+@media (max-width: 1700px) {
+  .stagingarea-icon {
+      position: absolute;
+      top: 30px; /* 根據需要調整垂直位置 */
+      right: 130px; /* 距離右側邊緣 20px */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+}
+
+.stagingarea-icon img {
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 1700px) {
+  .stagingarea-icon img {
+      width: 30px;
+      height: 30px;
+    }
 }
 
 .side-container {
   display: flex;
-  flex: 1; /* 剩余空间 */
+  flex: 1;
 }
 
 .sidebar {
   background-color: #192F42;
   width: 300px; /* 固定宽度 */
   height: calc(100% - 0px); /* 垂直居中 */
+}
 
+@media (max-width: 1700px) {
+  .sidebar {
+      background-color: #192F42;
+      width: 230px; /* 固定宽度 */
+      height: calc(100% - 0px); /* 垂直居中 */
+    }
 }
 
 .sidebar li {
@@ -83,11 +123,19 @@ body, html {
   overflow: auto;
 }
 
+.form-area ul {
+  margin-top: 0;
+  margin-left: 0;  /* 取消所有左邊距 */
+  padding-left: 0; /* 取消所有左邊內邊距 */
+}
+
 .form-area li {
   padding: 10px;
   margin-bottom: 5px; /* 每一行之间有间距 */
   display: flex;
   align-items: center;
+  width: 100%;  /* 确保 li 项目填满整个宽度 */
+  box-sizing: border-box; /* 防止内边距和边框造成元素超出容器 */
 }
 
 .form-area .dark-bg {
@@ -132,6 +180,35 @@ input[type="checkbox"]:checked {
   border-color: #0056b3;
 }
 
+.previewdelete-button {
+  padding: 5px 30px;
+  border-radius: 20px;
+  font-size: 28px;
+  cursor: pointer;
+  border: none;  /* 移除邊框 */
+}
+
+@media (max-width: 1700px) {
+  .previewdelete-button {
+      padding: 3px 20px;
+      border-radius: 20px;
+      font-size: 24px;
+      cursor: pointer;
+      border: none;  /* 移除邊框 */
+    }
+}
+
+.previewdelete-button.selected {
+  background-color: #EBC857;
+  color: #192F42;
+}
+
+.previewdelete-button.default {
+  background-color: #71777F;
+  color: inherit;
+}
+
+
 .upload-section {
   margin-bottom: 20px;
 }
@@ -160,5 +237,54 @@ input[type="checkbox"]:checked {
 .clear-button:hover {
   color: darkred;
 }
+
+.mailaccount{
+background-color: transparent; /* 移除背景顏色 */
+  border: 1px solid white;        /* 邊框顏色為白色 */
+  color: white;                   /* 文字顏色為白色 */
+  padding: 20px;                  /* 內邊距增加 */
+  width: 100%;                    /* 讓輸入框寬度自適應 */
+  border-radius: 10px;             /* 邊框圓角效果 */
+  margin-bottom:30px;
+
+}
+@media (max-width: 1700px) {
+  .mailaccount{
+  background-color: transparent; /* 移除背景顏色 */
+  border: 1px solid white;        /* 邊框顏色為白色 */
+  color: white;                   /* 文字顏色為白色 */
+  padding: 20px;                  /* 內邊距增加 */
+  width: 100%;                    /* 讓輸入框寬度自適應 */
+  border-radius: 10px;             /* 邊框圓角效果 */
+  margin-bottom:30px;
+}
+}
+
+.mailcontent{
+background-color: transparent; /* 移除背景顏色 */
+  border: 1px solid white;        /* 邊框顏色為白色 */
+  color: white;                   /* 文字顏色為白色 */
+  padding: 20px;                  /* 內邊距增加 */
+  width: 100%;                    /* 讓輸入框寬度自適應 */
+  height: 150px;                   /* 明確設定高度 */
+  border-radius: 10px;             /* 邊框圓角效果 */
+ text-align: left; /* 文字對齊左側 */
+  vertical-align: top;  /* 确保文本从顶部开始 */
+  resize: none;  /* 禁止改变textarea的大小 */
+  font-size: 28px;
+}
+
+.title{
+    text-align: left;
+    font-size: 45px;
+}
+
+@media (max-width: 1700px) {
+  .title{
+    text-align: left;
+    font-size: 35px;
+  }
+}
+
 
 
