20241204_kate_(1)新增申報方式下拉式選單(2)新增淨利%空格(3)錯字更改_已瞭解

--- a/FormA.css
+++ b/FormA.css
@@ -130,3 +130,28 @@ select.custom-select {
     font-family: 'custom-sans-serif', sans-serif;
 }
 
+select.option-select {
+    background-color: transparent;
+    border: 2px solid white;
+    font-family: 'custom-sans-serif', sans-serif;
+    font-size: 28px;
+    color: white;
+    padding: 5px;
+}
+
+@media (max-width: 1700px) {
+  select.option-select {
+    background-color: transparent;
+    border: 2px solid white;
+    font-family: 'custom-sans-serif', sans-serif;
+    font-size: 22px;
+    color: white;
+    padding: 5px;
+  }
+}
+
+.option-select option {
+    background-color: #192F42;
+    font-family: 'custom-sans-serif', sans-serif;
+}
+
